Updates from Overleaf

--- a/latex/20220608/main.tex
+++ b/latex/20220608/main.tex
@@ -16,7 +16,7 @@
 \title{システム情報工学特論}
 \subtitle{コードで学ぶAWS入門 - 第一回}
 \author{真野智之 (Tomoyuki Mano)}
-\institute[OIST]{Okinawa Institute of Science and Technology}
+\institute[OIST]{Okinawa Institute of Science and Technology (OIST)}
 \date{2022/06/08 @東大工学部}
 
 \begin{document}
@@ -103,7 +103,7 @@
     \begin{itemize}
         \item 第一回 (6/08): イントロダクション・セットアップ
         \item 第二回 (6/15): EC2 入門・クラウドを使った深層学習 (1)
-        \item 第三回 (6/22): クラウドを使った深層学習 (2)， Docker 入門
+        \item 第三回 (6/22): Docker 入門，クラウドを使った深層学習 (2)
     \end{itemize}
 \end{frame}
 
