Updates from Overleaf

--- a/latex/20220608/main.tex
+++ b/latex/20220608/main.tex
@@ -60,13 +60,12 @@
 
 \begin{frame}{講義について (2)}
 \begin{itemize}
-    \item 講義の中盤 (40分前後) で一度休憩をとります．
-    この際に質問などにも答えます．
+    \item 講義は座学6割・演習4割くらいのイメージで進める予定です．
     \item 講義に関する質問は Zoom のチャットに飛ばして下さい．
     できるだけすぐにその場で回答します．
     \item 講義の内容は
     \url{https://tomomano.github.io/learn-aws-by-coding/}\\
-    に従って行います．
+    に従って行います（8章までの予定)．
     講義ではコードのデモなど行いますが，基本的に伝える情報は資料と同じです．
     余裕のある人は各自のペースでどんどん先に進んでしまって構いません．
     \item ハンズオンのプログラムでバグなど発見した場合は
@@ -121,7 +120,10 @@ Windows ユーザーは，\href{https://docs.microsoft.com/en-us/windows/wsl/ins
 \begin{frame}{講義用AWSアカウント}
 
 \begin{itemize}
-    \item 登録されている受講者のメールアドレスに， AWS Organization への招待を送りました．
+    \item 講義用の AWS アカウントを作成します．
+    \item これから Zoom のチャットに Google Forms のリンクを貼ります．
+    そこに自分の名前とメールアドレス (かならず東大ドメインのものを使用すること)を回答してください．
+    \item 私から招待が送られます．
     \item この招待によってアカウントを作成すると，アカウントは本講義専用の "Organization" に所属します．
     \teim Organization に所属することで，AWSの利用コストはOrganizationに請求されます．
     \item 招待が届いたら，メールの中のリンクをクリックし，遷移する先の画面のIDに自分のメールアドレスを入力し，"パスワードのリセット"をクリックし，自身のパスワードを設定してください．
