Updates from Overleaf

--- a/latex/20220615/main.tex
+++ b/latex/20220615/main.tex
@@ -15,7 +15,7 @@
 
 \title{システム情報工学特論}
 \subtitle{コードで学ぶAWS入門 - 第二回}
-\author{真野智之 (Tomoyuki Mano)}
+\author{\texorpdfstring{真野智之 (Tomoyuki Mano)\newline\url{tomoyukimano[@]gmail.com}}{Author}}
 \institute[OIST]{Okinawa Institute of Science and Technology (OIST)}
 \date{2022/06/15 @東大工学部}
 
@@ -38,13 +38,12 @@
 
 \begin{frame}{講義について (2)}
 \begin{itemize}
-    \item 講義の中盤 (40分前後) で一度休憩をとります．
-    この際に質問などにも答えます．
+    \item 講義は座学6割・演習4割くらいのイメージで進める予定です．
     \item 講義に関する質問は Zoom のチャットに飛ばして下さい．
     できるだけすぐにその場で回答します．
     \item 講義の内容は
     \url{https://tomomano.github.io/learn-aws-by-coding/}\\
-    に従って行います．
+    に従って行います（8章までの予定)．
     講義ではコードのデモなど行いますが，基本的に伝える情報は資料と同じです．
     余裕のある人は各自のペースでどんどん先に進んでしまって構いません．
     \item ハンズオンのプログラムでバグなど発見した場合は
@@ -60,6 +59,14 @@
         \item 第二回 (6/15): EC2 入門・クラウドを使った深層学習 (1)
         \item 第三回 (6/22): Docker 入門，クラウドを使った深層学習 (2)
     \end{itemize}
+\end{frame}
+
+\begin{frame}{講義用AWSアカウント}
+\begin{itemize}
+    \item 前回の講義にて AWS アカウントの発行を行いました．
+    \item まだアカウントの準備ができていない人はすぐに真野まで連絡してください．
+\end{itemize}
+
 \end{frame}
 
 \begin{frame}{講義専用アカウントの注意点}
