--- a/latex/20220608/main.tex
+++ b/latex/20220608/main.tex
@@ -15,8 +15,7 @@
 
 \title{システム情報工学特論}
 \subtitle{コードで学ぶAWS入門 - 第一回}
-\author{真野智之 (Tomoyuki Mano)}
-\institute[OIST]{Okinawa Institute of Science and Technology (OIST)}
+\author{\texorpdfstring{真野智之 (Tomoyuki Mano)\newline\url{tomoyukimano[@]gmail.com}}{Author}}\institute[OIST]{Okinawa Institute of Science and Technology (OIST)}
 \date{2022/06/08 @東大工学部}
 
 \begin{document}
