Updates from Overleaf

--- a/latex/20220615/main.tex
+++ b/latex/20220615/main.tex
@@ -11,7 +11,7 @@
 \usepackage{minted}
 \usetheme{Madrid}
 \definecolor{links}{HTML}{2A1B81}
-\hypersetup{colorlinks,linkcolor=,urlcolor=links}
+\hypersetup{colorlinks,linkcolor=links,urlcolor=links}
 
 \title{システム情報工学特論}
 \subtitle{コードで学ぶAWS入門 - 第二回}
@@ -102,7 +102,7 @@
 \begin{frame}{演習1: EC2 インスタンスの作成}
 
 \begin{itemize}
-    \item \href{https://tomomano.github.io/learn-aws-by-coding/#sec_first_ec2}{講義資料4章 "初めてのEC2インスタンスを起動する"} のチュートリアルを自身の AWS アカウントを使用して実行せよ．
+    \item \href{https://tomomano.github.io/learn-aws-by-coding/\#sec_}{講義資料4章 "初めてのEC2インスタンスを起動する"} のチュートリアルを自身の AWS アカウントを使用して実行せよ．
     \item チュートリアルが完了したら，忘れずに CloudFormation のスタックを削除せよ．削除を忘れると無駄なクラウド利用料金が発生することになる．
 \end{itemize}
 
@@ -111,7 +111,7 @@
 \begin{frame}{演習2: EC2 で GPU を利用した計算を実行}
 
 \begin{itemize}
-    \item \href{https://tomomano.github.io/learn-aws-by-coding/#sec_jupyter_and_deep_learning}{講義資料6章 "AWS でディープラーニングを実践"} のチュートリアルを自身の AWS アカウントを使用して実行せよ．
+    \item \href{https://tomomano.github.io/learn-aws-by-coding/\#sec_jupyter_and_deep_learning}{講義資料6章 "AWS でディープラーニングを実践"} のチュートリアルを自身の AWS アカウントを使用して実行せよ．
     \item チュートリアルが完了したら，忘れずに CloudFormation のスタックを削除せよ．削除を忘れると無駄なクラウド利用料金が発生することになる．
     \item 先のスライドで説明した， G インスタンスの制限緩和がされていないとこのチュートリアルはエラーを出すことに留意せよ．
 \end{itemize}
@@ -127,7 +127,7 @@
     \item インストールの方法は
     \href{https://docs.docker.com/engine/install/}{公式ドキュメンテーション}
     や
-    \href{https://tomomano.github.io/learn-aws-by-coding/#sec:install_docker}{講義資料15.6章}
+    \href{https://tomomano.github.io/learn-aws-by-coding/\#sec:install_docker}{講義資料15.6章}
     を参照してください．
 \end{itemize}
     
