Updates from Overleaf

--- a/latex/20220608/main.tex
+++ b/latex/20220608/main.tex
@@ -15,7 +15,8 @@
 
 \title{システム情報工学特論}
 \subtitle{コードで学ぶAWS入門 - 第一回}
-\author{\texorpdfstring{真野智之 (Tomoyuki Mano)\newline\url{tomoyukimano[@]gmail.com}}{Author}}\institute[OIST]{Okinawa Institute of Science and Technology (OIST)}
+\author[Tomoyuki Mano]{\texorpdfstring{真野智之 (Tomoyuki Mano)\newline\url{tomoyukimano[@]gmail.com}}{Author}}
+\institute[OIST]{Okinawa Institute of Science and Technology (OIST)}
 \date{2022/06/08 @東大工学部}
 
 \begin{document}
