--- a/latex/20220615/main.tex
+++ b/latex/20220615/main.tex
@@ -15,7 +15,7 @@
 
 \title{システム情報工学特論}
 \subtitle{コードで学ぶAWS入門 - 第二回}
-\author{\texorpdfstring{真野智之 (Tomoyuki Mano)\newline\url{tomoyukimano[@]gmail.com}}{Author}}
+\author[Tomoyuki Mano]{\texorpdfstring{真野智之 (Tomoyuki Mano)\newline\url{tomoyukimano[@]gmail.com}}{Author}}
 \institute[OIST]{Okinawa Institute of Science and Technology (OIST)}
 \date{2022/06/15 @東大工学部}
 
